# calibrationPatternGenerator

./: CMakeLists.txt  README.md  config.h  main.cpp
templates/: config.h.in
templates/pptx/: [Content_Types].xml
templates/pptx/docProps/: app.xml  core.xml
templates/pptx/ppt/: presentation.xml  viewProps.xml
templates/pptx/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout2.xml  slideLayout3.xml  slideLayout4.xml  slideLayout5.xml  slideLayout6.xml  slideLayout7.xml  slideLayout8.xml  slideLayout9.xml
templates/pptx/ppt/slideMasters/: slideMaster1.xml
templates/pptx/ppt/slides/: slide1.xml
templates/pptx/ppt/theme/: theme1.xml
